# pinocchio-js

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  package.json  test-node.js  test.html
.github/workflows/: build.yml  release.yml
src/: pinocchio_config.hpp  pinocchio_embind.cpp  urdf-parser.js  urdf-parser.mjs
src/pinocchio/: config.hpp  deprecated.hpp  warning.hpp
tests/: runner.js  smoke_test.js  test_algo.js  test_math.js  test_model.js  test_urdf.js
tests/browser/: index.html
urdf/abb_irb120_support/urdf/: abbIrb120.urdf
urdf/kuka_kr210_support/urdf/: kr210l150.urdf
